--- a/crud-application/src/App.css
+++ b/crud-application/src/App.css
@@ -1,7 +1,30 @@
 .App {
-  width: 50rem;
-  height: 20rem;
-  background-color: red;
+  width: 40rem;
+  height: auto;
+  background-color: #f2f2f2;
+  border-radius: 10px;
   margin: 0 auto;
   padding: 10px 20px;
+  box-shadow: 0 0 1rem #a6a6a6;
+}
+
+.formname{
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
+  color: #0062ff;
+  text-align: center;
+  margin: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.RadioButton{
+  transform: scale(1.3);
+  margin: 10px;
+}
+
+.LableName{
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
+  margin: 0 10px;
 }
